--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,3 +26,13 @@ jobs:
         username: doleduy
         key: ${{ secrets.KEY }}
         script: whoami
+    - name: deploy to server
+      uses: AEnterprise/rsync-deploy@v1.0
+      env:
+        DEPLOY_KEY: ${{ secrets.SERVER_SSH_KEY }}
+        ARGS: ""
+        SERVER_PORT: 22
+        FOLDER: "./"
+        SERVER_IP: 35.198.220.200
+        USERNAME: doleduy
+        SERVER_DESTINATION: /home/doleduy/TestGit/
