--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
     - name: deploy to server
       uses: AEnterprise/rsync-deploy@v1.0
       env:
-        DEPLOY_KEY: ${{ secrets.SERVER_SSH_KEY }}
+        DEPLOY_KEY: ${{ secrets.KEY }}
         ARGS: ""
         SERVER_PORT: 22
         FOLDER: "./"
