--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,6 +19,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - run: mkdir ./staging && touch ./staging/test.txt
     - name: executing remote ssh commands using ssh key
       uses: appleboy/ssh-action@master
       with:
